# Coral

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Coral.sln  Dockerfile  LICENSE  README.md  benchmark-results.md  docker-compose.yml  mse-research.md  package.json  streaming-implementation-plan.md
.github/workflows/: create-release.yml  dotnet.yml  release-please.yml
plans/: authentication-system.md  bulk-extensions-indexer-examples.md  bulk-insert-library-design.md  client-plugins.md  config-plan.md  indexer-api-examples.md  indexer-service-refactor.md  indexer-stage1-bulk-insertion.md  indexer-stage2-signalr-progress.md  indexer-stage3-worker-refactoring.md  inference-performance.md  mpv-everywhere.md  new-indexer-service-summary.md  postgres-to-embedded.md  progressive-batching-async-workers.md  remote-playback-system.md  scan-progress-websocket.md  settings.md  theme.md  transcoder-pipeline.md
src/Coral.Api/: CHANGELOG.md  Coral.Api.csproj  LoadedPlugin.cs  PluginContext.cs  PluginInitializer.cs  PluginLoader.cs  Program.cs  RequiredNotNullableSchemaFilter.cs  ScanModels.cs  ScanReporter.cs  ServiceCollectionExtensions.cs  appsettings.Development.json  appsettings.json  openapi.json
src/Coral.BulkExtensions/: BulkInsertContext.cs  BulkInsertExtensions.cs  BulkInsertOptions.cs  BulkInsertStats.cs  Coral.BulkExtensions.csproj  DbSetBulkExtensions.cs
src/Coral.Cli/: Coral.Cli.csproj  Program.cs  appsettings.json
src/Coral.Configuration/: Configuration.cs  Coral.Configuration.csproj
src/Coral.Database/: Coral.Database.csproj  CoralDbContext.cs  CoralDbContextFactory.cs
src/Coral.Database.Models/: Album.cs  Artist.cs  ArtistOnTrack.cs  ArtistWithRole.cs  Artwork.cs  AudioFile.cs  AudioMetadata.cs  BaseTable.cs  Coral.Database.Models.csproj  Device.cs  FavoriteAlbum.cs  FavoriteArtist.cs  FavoriteTrack.cs  Genre.cs  Keyword.cs  MusicLibrary.cs  Playlist.cs  PlaylistTrack.cs  RecordLabel.cs  Track.cs  TrackEmbedding.cs  User.cs
src/Coral.Dto/: ApiError.cs  Coral.Dto.csproj
src/Coral.Encoders/: CommonEncoderMethods.cs  Coral.Encoders.csproj  EncoderApp.cs  EncoderFactory.cs  EncoderFrontendAttribute.cs  EncoderFrontendIndex.cs  HelperEnums.cs  IArgumentBuilder.cs  IEncoder.cs  TranscodingJob.cs  TranscodingJobManager.cs
src/Coral.Essentia/: Configurable.cs  Coral.Essentia.csproj  EssentiaException.cs  EssentiaInference.cs  EssentiaMath.cs  MonoLoader.cs  MusiCnnFeatureExtractor.cs  PreprocessingDebugger.cs  Program.cs  SRC.cs  TensorflowPredictEffnetDiscogs.cs  Types.cs
src/Coral.Essentia.API/: Dockerfile  README.md  main.py  pyproject.toml
src/Coral.Essentia.API/recs/: embeddings.py  enums.py
src/Coral.Essentia.Bindings/: CMakeLists.txt  Coral.Essentia.Bindings.csproj  Coral.Essentia.Bindings.vcxproj  Essentia.cs  EssentiaBindings.cs  EssentiaContextManager.cs  EssentiaService.cs  Program.cs  essentia_msvc_fix.h  essentia_wrapper.cpp  essentia_wrapper.h  pch.cpp  pch.h
src/Coral.Essentia.Bindings/Coral.Essentia.Cli/: Coral.Essentia.Cli.vcxproj  main.cpp
src/Coral.Essentia.Bindings/Properties/: launchSettings.json
src/Coral.Essentia.Bindings/lib/: essentia_bindings.exp  essentia_bindings.lib
src/Coral.Essentia.Bindings/wrapper/: Coral.Essentia.Bindings.sln  Coral.Essentia.Bindings.vcxproj  Coral.Essentia.Bindings.vcxproj.filters  essentia_context.cpp  essentia_context.h  essentia_wrapper.cpp  essentia_wrapper.h
src/Coral.Essentia.Cli/: CMakeLists.txt  Coral.Essentia.Cli.cpp  Coral.Essentia.Cli.sln  Coral.Essentia.Cli.vcxproj  Coral.Essentia.Cli.vcxproj.filters  Makefile  README.md
src/Coral.EventHub/: TrackPlaybackEventEmitter.cs  TrackPlaybackEvents.cs
src/Coral.Events/: Coral.Events.csproj  MusicLibraryRegisteredEventEmitter.cs  TrackPlaybackEventEmitter.cs
src/Coral.Frontend/: .eslintrc.js  .gitignore  next.config.js  openapi-codegen.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/Coral.Plugin.LastFM/: Coral.Plugin.LastFM.csproj  LastFmConfiguration.cs  LastFmController.cs  LastFmPlugin.cs  LastFmService.cs  LastFmUserSession.cs
src/Coral.PluginBase/: Coral.PluginBase.csproj  IHostServiceProxy.cs  IPlugin.cs  IPluginService.cs  IServiceProxy.cs  PluginControllerBase.cs
src/Coral.PluginHost/: Coral.PluginHost.csproj  HostServiceProxy.cs  LoadedPlugin.cs  MyActionDescriptorChangeProvider.cs  PluginContext.cs  PluginHost.cs  PluginLoader.cs  ServiceProxy.cs
src/Coral.Services/: ArtworkService.cs  AuthService.cs  Coral.Services.csproj  DeviceService.cs  EmbeddingService.cs  FavoritesService.cs  FileSystemService.cs  IIndexerService.cs  IndexerService.cs  InferenceService.cs  LibraryService.cs  NewIndexerService.cs  NewLibraryService.cs  PaginationService.cs  PlaybackService.cs  PlaylistService.cs  RegexPatterns.cs  SearchRegexPatterns.cs  SearchService.cs  SessionCacheService.cs  SignedUrlService.cs  TranscoderService.cs  UserService.cs
src/coral/: README.md  package.json  tsconfig.json
src/coral-app/: .gitignore  .metroignore  README.md  app.json  bun.lockb  electron-builder.json  eslint.config.js  metro-hls-transformer.js  metro.config.js  openapi-codegen.config.ts  package.json  playback-log.txt  player-refactor.md
src/coral2/: package.json
tests/Coral.BulkExtensions.Tests/: BulkInsertAlbumTests.cs  Coral.BulkExtensions.Tests.csproj  DatabaseCollection.cs
tests/Coral.Dto.Tests/: AlbumDtoTests.cs  ArtistDtoTests.cs  Coral.Dto.Tests.csproj  DatabaseCollection.cs
tests/Coral.Encoders.Tests/: AfConvertTests.cs  Coral.Encoders.Tests.csproj  EncoderFactoryTests.cs  TranscodingJobManagerTests.cs
tests/Coral.Services.Tests/: AfConvertTests.cs  AuthServiceTests.cs  Coral.Services.Tests.csproj  DatabaseCollection.cs  EncoderFactoryTests.cs  IndexerServiceTests.cs  LibraryServiceTests.cs  NewIndexerServiceTests.cs  PaginationServiceTests.cs  SearchServiceTests.cs  SignedUrlServiceTests.cs  TestDataRepository.cs  TestDatabase.cs  TranscodingJobManagerTests.cs  UserServiceTests.cs
tests/Coral.TestProviders/: Coral.TestProviders.csproj  DatabaseCollection.cs  (+4 more)
(+428 files in other folders)
